Implement DecisionDefinitionReaderOS and DecisionDefinitionWriterOS, DefinitionReaderOS (#11033)
* feat(opensearch): Implement DecisionDefinitionReaderOS and DecisionDefinitionWriterOS, DefinitionReaderOS

* feat(opensearch): resolve comments

---------

Co-authored-by: kovaIenko <“ruslan.kovalenko-ext@camunda.com”>